--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
           <div class="col-3 col">
             <label for="zip">Zip Code:</label>
-            <input id="zip" name="user_zip" type="text">
+            <input id="zip" name="user_zip" type="text" maxlength="5">
           </div>
 
           <div class="col-3 col">
