--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
           <div class="col-6 col">
             <label for="cc-num">Card Number:</label>
-            <input id="cc-num" name="user_cc-num" type="text">
+            <input id="cc-num" name="user_cc-num" type="text" maxlength="16">
           </div>
 
           <div class="col-3 col">
@@ -118,7 +118,7 @@
 
           <div class="col-3 col">
             <label for="cvv">CVV:</label>
-            <input id="cvv" name="user_cvv" type="text">
+            <input id="cvv" name="user_cvv" type="text" maxlength="3">
           </div>
 
           <label for="exp-month">Expiration Date:</label>
