--- a/index.html
+++ b/index.html
@@ -108,17 +108,17 @@
 
           <div class="col-6 col">
             <label for="cc-num">Card Number:</label>
-            <input id="cc-num" name="user_cc-num" type="text" maxlength="16">
+            <input id="cc-num" name="user_cc-num" type="text">
           </div>
 
           <div class="col-3 col">
             <label for="zip">Zip Code:</label>
-            <input id="zip" name="user_zip" type="text" maxlength="5">
+            <input id="zip" name="user_zip" type="text">
           </div>
 
           <div class="col-3 col">
             <label for="cvv">CVV:</label>
-            <input id="cvv" name="user_cvv" type="text" maxlength="3">
+            <input id="cvv" name="user_cvv" type="text">
           </div>
 
           <label for="exp-month">Expiration Date:</label>
